--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/start_running"/>
+
+        <TextView android:id="@+id/text_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </LinearLayout>
 
 <!--</RelativeLayout>-->
